# Runepad

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.test.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_READING.md  DEVELOPMENT.md  ROADMAP.md  STACK.md  STARTUP.md  UI.md
scripts/windows/: create-msix-dev-cert.ps1  pack-msix.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell-ext/: Cargo.toml
src-tauri/shell-ext/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: dir_ops.rs  file_ops.rs  menu_ops.rs  mod.rs  session_ops.rs  system_ops.rs  watch_ops.rs  window_ops.rs
src-tauri/src/commands/tests/: dir_ops_tests.rs  file_ops_tests.rs  session_ops_tests.rs  window_ops_tests.rs
src-tauri/src/utils/: encoding.rs  mod.rs  path.rs
src-tauri/src/utils/tests/: path_tests.rs
src-tauri/windows/: nsis-installer-hooks.nsh
src-tauri/windows/msix/: Package.appxmanifest  README.md
src/api/: dirApi.ts  fileApi.ts  index.ts  menuApi.ts  sessionApi.ts  systemApi.ts  windowApi.ts
src/hooks/: useAppMenu.ts  useAppSettings.ts  useAppTheme.ts  useCloseTab.ts  useDirWatcher.ts  useEditMenu.ts  useEditorShortcuts.ts  useExplorerActions.ts  useFileActions.ts  useSessionRestore.ts  useSettingsMenu.ts
src/i18n/: index.ts  (+1 more)
tests/: setup.ts
(+80 files in other folders)
