[package]
name = "runepad"
version = "0.6.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "runepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
notify = "8"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
