[package]
name = "runepad_context_menu"
version = "0.5.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.61.2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
] }
